--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,10 @@ GOOGLE FONTS START
 ***********************************************/
 nav {
   /* border: 1px solid #000; */
+  background-color: white;
+  box-shadow: 0px 0px 10px 0.5px rgb(207, 207, 207);
   width: 100%;
   height: 120px;
-  background-color: #fcf3f3;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -144,6 +145,7 @@ nav {
   width: 100%;
   height: 100%;
   position: relative;
+  padding: 20% 0px;
 
   display: flex;
   align-items: flex-start;
@@ -155,7 +157,7 @@ nav {
   /* border: 1px solid #000; */
   font-size: 2.5vw;
   margin-left: 16%;
-  margin-top: 20%;
+  /* margin-top: 20%; */
   color: var(--orange);
 }
 
@@ -191,7 +193,7 @@ nav {
   /* border: 1px solid #000; */
   position: absolute;
   left: 0px;
-  top: 120px;
+  top: 130px;
   width: 40vw;
   height: 500px;
   z-index: -10;
@@ -220,3 +222,58 @@ nav {
 /***********************************************
     HEADER SECTION START
 ************************************************/
+
+/***********************************************
+    POLICY SECTION START
+***********************************************/
+#policy {
+  /* border: 1px solid #000; */
+  width: 100%;
+  height: 100%;
+}
+
+#policy h1 {
+  /* border: 1px solid #000; */
+  padding-bottom: 50px;
+  text-align: center;
+  font-size: 2.5vw;
+  color: var(--orange);
+}
+
+#policy .card-div {
+  padding: 20px;
+  /* border: 1px solid #000; */
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+#policy .card {
+  /* border: 1px solid #000; */
+  width: 284px;
+  height: 100px;
+  margin-bottom: 10px;
+  background-color: #ff8a6721;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#policy .card .fa-solid {
+  color: var(--blue);
+  font-size: 40px;
+}
+
+#policy .card p {
+  color: var(--orange);
+  font-size: 20px;
+  font-weight: 600;
+}
+
+/***********************************************
+    POLICY SECTION END
+***********************************************/
