--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ nav {
   /* border: 1px solid #000; */
   padding-bottom: 50px;
   text-align: center;
-  font-size: 2.5vw;
+  font-size: 3vw;
   color: var(--orange);
 }
 
@@ -276,4 +276,91 @@ nav {
 
 /***********************************************
     POLICY SECTION END
+***********************************************/
+
+/***********************************************
+    SHOP SECTION START
+***********************************************/
+
+#shop {
+  /* border: 1px solid #000; */
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+#shop h1 {
+  /* border: 1px solid #000; */
+  padding: 50px 0px;
+  text-align: center;
+  font-size: 3vw;
+  color: var(--orange);
+}
+
+#shop .shop-div {
+  /* border: 1px solid #000; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.shop-div .shop-card {
+  /* border: 1px solid #000; */
+  width: 600px;
+  height: 300px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.shop-card h3 {
+  color: var(--light-orange);
+  font-size: 40px;
+  font-weight: 400;
+  margin-top: 25%;
+}
+
+.shop-card a {
+  /* border: 1px solid #000; */
+  background-color: var(--orange);
+  border-radius: 50px;
+  padding: 8px 30px;
+  margin-top: 20px;
+  font-size: 15px;
+  color: white;
+  transition: 0.6s;
+}
+
+.shop-card a:hover {
+  background-color: var(--blue);
+}
+
+.shop-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  filter: contrast(50%);
+  filter: brightness(50%);
+  transition: 0.6s;
+}
+
+.shop-card:hover img {
+  rotate: 10deg;
+  transform: scale(1.5);
+}
+
+/***********************************************
+    SHOP SECTION END
 ***********************************************/
