--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ nav {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 20% 0px;
+  padding: 40vh 0vh;
 
   display: flex;
   align-items: flex-start;
@@ -232,6 +232,7 @@ nav {
   /* border: 1px solid #000; */
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 #policy h1 {
