--- a/css/women-collection.css
+++ b/css/women-collection.css
@@ -222,6 +222,25 @@ nav {
   color: var(--orange);
   user-select: none;
 }
+
+.collection-div {
+  border: 1px solid #000;
+  width: 80%;
+  height: 100%;
+  overflow-y: scroll;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.collection-div .card {
+  border: 1px solid #000;
+  width: 480px;
+  height: 360px;
+}
+
 /***********************************************
     PRODUCT SECTION END
 ***********************************************/
