--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,22 @@
   color: white;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #ff8a677e;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ff8a677e;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--orange);
+  border-radius: 50px;
+}
+
 :root {
   --blue: #03a4ed;
   --orange: #ff695f;
@@ -139,7 +155,7 @@ nav {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 40vh 0vh;
+  padding: 30vh 0vh;
 
   display: flex;
   align-items: flex-start;
@@ -299,6 +315,7 @@ nav {
   text-align: center;
   font-size: 3vw;
   color: var(--orange);
+  padding-top: 120px;
 }
 
 #shop .shop-div {
@@ -420,6 +437,7 @@ nav {
   text-align: center;
   font-size: 3vw;
   color: var(--orange);
+  margin-top: 50px;
 }
 
 #about h3 {
