--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ nav {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 30vh 0vh;
+  min-height: 100vh;
 
   display: flex;
   align-items: flex-start;
@@ -248,7 +248,7 @@ nav {
 #policy {
   /* border: 1px solid #000; */
   width: 100%;
-  height: 100%;
+  min-height: 20vh;
   position: relative;
 }
 
@@ -261,8 +261,8 @@ nav {
 }
 
 #policy .card-div {
-  padding: 20px;
   /* border: 1px solid #000; */
+  padding: 20px;
   height: 100%;
   width: 100%;
   display: flex;
@@ -310,7 +310,7 @@ nav {
 }
 
 #shop h1 {
-  /* border: 1px solid #000; */
+  border: 1px solid #000;
   padding: 50px 0px;
   text-align: center;
   font-size: 3vw;
@@ -335,6 +335,7 @@ nav {
   margin-bottom: 30px;
   position: relative;
   overflow: hidden;
+  margin: 10px;
 
   display: flex;
   align-items: center;
