--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -258,7 +258,7 @@ nav {
 .collection-div .card {
   border: 1px solid var(--orange);
   width: 480px;
-  height: 360px;
+  height: 400px;
   display: flex;
   margin-bottom: 30px;
   transition: 0.6s;
@@ -321,23 +321,22 @@ nav {
   font-size: 12px;
 }
 
-#photo-change-btn {
+#photo-change {
   /* border: 1px solid #000; */
   width: 100%;
-  padding: 15px 20px;
-}
-
-#photo-change-btn a {
-  /* border: 1px solid #000; */
-  font-size: 25px;
-  width: 50px;
-  border-radius: 10px;
-  color: var(--orange);
-  transition: 0.6s;
+  padding: 5;
+  height: 20%;
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+}
+
+#photo-change img {
+  /* border: 1px solid #000; */
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 #add-cart-btn {
