--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -272,12 +272,18 @@ nav {
   /* border: 1px solid #000; */
   width: 50%;
   height: 100%;
+  position: relative;
 }
 
 .card .card-left img {
+  /* border: 1px solid #000; */
   width: 100%;
   height: 100%;
   object-fit: cover;
+
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .card .card-right {
