updated home page

--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ nav {
   /* border: 1px solid #000; */
   font-weight: 200;
   font-size: 15px;
-  width: 1000px;
+  width: 100%;
   text-align: justify;
   text-align-last: center;
 }
@@ -462,43 +462,131 @@ nav {
 ***********************************************/
 
 /***********************************************
-    FOOTER SECTION START
+    SUBSCRIPTION SECTION START
 ***********************************************/
-#footer {
+#subscription {
   /* border: 1px solid #000; */
-  min-height: 40vh;
+  width: 100%;
+  min-height: 60vh;
   position: relative;
 
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  flex-direction: column;
+  justify-content: center;
 }
-#footer::after {
+#subscription::after {
   content: "";
-  /* border: 1px solid #f00; */
-  background-image: url(../images/footer-dec.webp);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: top;
-  width: 100%;
-  min-height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url(../images/policy.webp);
+  background-position: left;
+  background-size: contain;
+  background-repeat: no-repeat;
   z-index: -99;
+  opacity: 50%;
+}
+#subscription::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url(../images/portfolio-left-dec.webp);
+  background-position: right;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: -99;
+  opacity: 50%;
 }
 
-#footer img {
+.form-box {
   /* border: 1px solid #000; */
-  width: 5vw;
-  text-align: center;
+  box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.226);
+  border-radius: 20px;
+  position: relative;
+  width: 500px;
+  height: 350px;
+  margin: 10px;
+  background-image: url(../images/contact-form-bg.webp);
+  background-position: top right;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#footer p {
+.form-box .form-value {
   /* border: 1px solid #000; */
-  text-align: center;
+  width: 95%;
 }
+
+.inputbox {
+  /* border: 1px solid #000; */
+  position: relative;
+  margin: 30px 0px;
+  width: 100%;
+  border-bottom: 1px solid var(--orange);
+}
+
+.inputbox label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: var(--orange);
+  font-size: 1em;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+input:focus ~ label,
+input:valid ~ label {
+  top: -5px;
+}
+
+.inputbox input {
+  width: 100%;
+  height: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  padding: 0 35px 0 5px;
+  color: var(--light-orange);
+}
+
+.inputbox i {
+  position: absolute;
+  right: 8px;
+  color: var(--orange);
+  font-size: 1.2em;
+  top: 20px;
+}
+
+form div button {
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background-color: var(--orange);
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 400;
+  transition: 0.6s;
+}
+
+form div button:hover {
+  background-color: var(--blue);
+}
+
 /***********************************************
-    FOOTER SECTION END
+    SUBSCRIPTION SECTION END
 ***********************************************/
