--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -161,7 +161,7 @@ nav {
 
 #products-section {
   /* border: 1px solid #f00; */
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   /* padding-top: 9%; */
 
@@ -373,10 +373,204 @@ nav {
     ORDER FORM SECTION END
 ***********************************************/
 #order-form {
-  border: 1px solid #00ff00;
+  /* border: 1px solid #00ff00; */
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  max-height: 100%;
+  background-color: rgba(0, 0, 0, 0.705);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  top: 0;
+  left: 0;
 }
+
+.form-main-div {
+  /* border: 1px solid #000; */
+  width: 80%;
+  min-height: 90vh;
+  background-color: rgba(255, 255, 255, 0.26);
+  backdrop-filter: blur(50px);
+
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-main-div .fa-xmark {
+  /* border: 1px solid #000; */
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1.1% 1.3%;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  transition: 0.6s;
+}
+
+.form-main-div .fa-xmark:hover {
+  background-color: red;
+}
+
+.form-left-div {
+  /* border: 1px solid #000; */
+  width: 600px;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.form-left-div h4 {
+  /* border: 1px solid #000; */
+  font-size: 25px;
+  font-weight: 400;
+  color: white;
+}
+
+.form-left-div .form {
+  /* border: 1px solid #f00; */
+  width: 70%;
+  height: 90%;
+}
+
+form label {
+  color: white;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  /* border: 1px solid #000; */
+  width: 100%;
+  font-weight: 300;
+  font-size: 15px;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  outline: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: none;
+}
+
+.form-right-div {
+  /* border: 1px solid #000; */
+  width: 600px;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.form-right-div h4 {
+  /* border: 1px solid #000; */
+  font-size: 25px;
+  font-weight: 400;
+  color: white;
+}
+
+.form-right-div input[type="text"],
+.form-right-div input[type="email"],
+.form-right-div input[type="tel"],
+.form-right-div input[type="number"] {
+  /* border: 1px solid #000; */
+  width: 100%;
+  height: 25px;
+  font-weight: 300;
+  font-size: 15px;
+  padding-left: 40px;
+  border: none;
+  border-bottom: 1px solid rgb(218, 218, 218);
+  outline: none;
+  margin: 1.6px 0px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  resize: none;
+  color: var(--heading);
+}
+
+.form-right-div label {
+  /* border: 1px solid #000; */
+  font-size: 15px;
+}
+
+.form-right-div .form .button-div {
+  /* border: 1px solid #f00; */
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.form-right-div .form .button-div button {
+  width: 180px;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 20px;
+}
+
+.form-right-div .form .button-div button:nth-child(1) {
+  border: 2px solid var(--blue);
+  background-color: var(--blue);
+  color: white;
+  transition: 0.6s;
+  outline: none;
+}
+
+.form-right-div .form .button-div button:nth-child(1):hover {
+  border: 2px solid white;
+  background-color: transparent;
+  color: white;
+}
+
+.form-right-div .form .button-div button:nth-child(2) {
+  background-color: var(--orange);
+  border: none;
+  color: white;
+  outline: none;
+  transition: 0.6s;
+}
+
+.form-right-div .form .button-div button:nth-child(2):hover {
+  background-color: var(--blue);
+  color: white;
+  outline: none;
+}
+
+.form-right-div .form {
+  /* border: 1px solid #000; */
+  width: 70%;
+  height: 90%;
+}
+
+.fade-in {
+  animation-name: fade-in;
+  animation-duration: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+}
+
+.fade-in2 {
+  animation-name: fade-in2;
+  animation-duration: 2s;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+}
+
 /***********************************************
     ORDER FORM SECTION END
 ***********************************************/
