--- a/css/style.css
+++ b/css/style.css
@@ -590,3 +590,123 @@ form div button:hover {
 /***********************************************
     SUBSCRIPTION SECTION END
 ***********************************************/
+
+/***********************************************
+    FOOTER SECTION START
+***********************************************/
+#footer {
+  /* border: 1px solid #f00; */
+  min-height: 50vh;
+  width: 100%;
+  position: relative;
+}
+
+#footer > p {
+  /* border: 1px solid #f00; */
+  text-align: center;
+  color: var(--orange);
+  padding: 10px;
+}
+
+#footer::after {
+  /* border: 1px solid #000; */
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -99;
+  content: "";
+  width: 100%;
+  height: 200px;
+  background-image: url(../images/footer-dec.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#footer .footer-image {
+  /* border: 1px solid #000; */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-image img {
+  /* border: 1px solid #000; */
+  width: 100px;
+}
+
+#footer .footer-services {
+  /* border: 1px solid #f00; */
+  min-height: 100px;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.footer-services a {
+  /* border: 1px solid #000; */
+  padding: 5px 0px;
+  width: 200px;
+  margin: 10px;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 20px;
+  background-color: var(--orange);
+  color: white;
+  transition: 0.6s;
+}
+
+.footer-services a:hover {
+  background-color: var(--blue);
+}
+
+.help-line {
+  /* border: 1px solid #000; */
+  width: 100%;
+  min-height: 50px;
+  color: var(--orange);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.help-line a {
+  /* border: 1px solid #000; */
+  color: var(--orange);
+  padding: 0px 10px;
+  transition: 0.6s;
+}
+
+.help-line a:hover {
+  /* border: 1px solid #000; */
+  color: var(--blue);
+}
+
+.email {
+  /* border: 1px solid #000; */
+  width: 100%;
+  min-height: 50px;
+  color: var(--orange);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.email a {
+  /* border: 1px solid #000; */
+  color: var(--orange);
+  padding: 0px 10px;
+  transition: 0.6s;
+}
+
+.email a:hover {
+  /* border: 1px solid #000; */
+  color: var(--blue);
+}
+/***********************************************
+    FOOTER SECTION END
+***********************************************/
