--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -277,6 +277,7 @@ nav {
   width: 50%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .card .card-left img {
@@ -284,7 +285,8 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
-
+  cursor: zoom-in;
+  transform: translate(0%, 0%) scale(1);
   /* position: absolute; */
   /* top: 0; */
   /* left: 0; */
@@ -295,6 +297,27 @@ nav {
   width: 50%;
   height: 100%;
   position: relative;
+}
+
+#zoomedDiv{
+  /* border: 1px solid #f00; */
+  /* display: none; */
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 99;
+}
+
+
+#zoomedDiv img{
+  /* border: 1px solid #f00; */
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .card .card-right h3 {
