--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -610,7 +610,7 @@ MODAL BOX SECTION START
   pointer-events: all;
   box-shadow: 0px 0px 10px 1px var(--gray);
 
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
@@ -641,7 +641,7 @@ MODAL BOX SECTION START
   color: white;
   cursor: pointer;
   width: 100%;
-  padding: 6px 0px;
+  padding: 9px 0px;
   font-size: 1rem;
 }
 /***********************************************
