--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-@import "main-media-query.css" screen and (max-width: 650px) and
-  (min-width: 320px);
-
 * {
   padding: 0;
   margin: 0;
@@ -131,7 +128,7 @@ a {
 
 .nav-right .button {
   background-color: var(--orange);
-  font-size: 1.2vw;
+  font-size: 15px;
   padding: 10px 30px;
   outline: none;
   border: none;
@@ -175,6 +172,9 @@ HEADER SECTION START
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
+}
+#header img {
+  display: none;
 }
 
 #header::after {
@@ -236,17 +236,16 @@ HEADER SECTION START
 }
 
 #header .button {
+  /* border: 1px solid #000; */
   background-color: var(--orange);
+  border-radius: 50px;
+  margin-top: 20px;
   padding: 8px 30px;
   font-size: 15px;
-  outline: none;
-  border: none;
-  margin-left: 16%;
   margin-top: 2%;
-  border-radius: 20px;
-  color: var(--white);
-  cursor: pointer;
-  transition: 0.5s;
+  margin-left: 16%;
+  color: white;
+  transition: 0.6s;
 }
 
 #header .button:hover {
@@ -747,6 +746,7 @@ form div button:hover {
   #header img {
     width: 30vw;
     margin: 10px auto;
+    display: block;
   }
 
   #header::after {
@@ -776,7 +776,7 @@ form div button:hover {
 
   #header p {
     /* border: 1px solid #000; */
-    font-size: 3vw;
+    font-size: 4vw;
     font-weight: 500;
     margin-left: 0%;
     color: var(--gray);
@@ -784,17 +784,8 @@ form div button:hover {
   }
 
   #header .button {
-    background-color: var(--orange);
-    font-size: 2vw;
-    padding: 10px 30px;
-    outline: none;
-    border: none;
+    font-size: 15px;
     margin-left: 0%;
-    margin-top: 2%;
-    border-radius: 20px;
-    color: var(--white);
-    cursor: pointer;
-    transition: 0.5s;
   }
 
   #policy h1 {
