--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ HEADER SECTION START
 
 #policy h1 {
   /* border: 1px solid #000; */
-  padding-bottom: 50px;
+  padding: 50px 0px;
   text-align: center;
   font-size: 3vw;
   color: var(--orange);
@@ -794,13 +794,21 @@ form div button:hover {
   }
 
   #shop h1 {
+    /* border: 1px solid #000; */
+    text-align: center;
     font-size: 8vw;
+    color: var(--orange);
+    padding-bottom: 20px;
+    padding-top: 0px;
   }
 
   #about h1 {
     /* border: 1px solid #000; */
-
+    padding: 0px 0px;
+    text-align: center;
     font-size: 8vw;
+    color: var(--orange);
+    margin-top: 10px;
   }
 
   #about h3 {
